# dbt-cp

./: .gitignore  README.md  profiles.yml  pyproject.toml
.github/: hosting.yml
.github/workflows/: hosting.yml
db/: db.duckdb
models/example/: schema.yml
src/dbt_cp/: __init__.py
