[project]
name = "dbt-cp"
version = "0.1.0"
description = "Add a short description here"
authors = [
    { name = "Takumi Abe", email = "ta93abe@ta93abe.com" }
]
dependencies = ["dbt-duckdb~=1.6.2"]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
[tool.hatch.metadata]
allow-direct-references = true
